<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pppp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="#777777"
        android:padding="20dp"
        android:text="@string/txtview"
        android:textColor="#ff0200"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPer"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/Percent"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtPnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/txtper"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtYnum"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/score"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txtEnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtstring"

            android:inputType="number"
            android:autofillHints="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="60dp"
        android:background="#200420"
        android:text="@string/calnow"
        android:textColor="#ff00ff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#ff1230"
        android:textSize="40sp" />

</LinearLayout>